--- a/style.css
+++ b/style.css
@@ -17,4 +17,39 @@ body::before{
 #navbar{
     transition-duration: 300ms;
 }
+body {
+  overflow-x: hidden;
+}
+
+.bg-dark.text-center.p-5.p-lg-0.pt-lg-5.text-light {
+  padding-bottom: 0;
+}
+
+.container#home-section {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+@media (max-width: 767px) {
+  .bg-dark.text-center.p-5.p-lg-0.pt-lg-5.text-light {
+    padding-top: 2rem; /* Adjust as needed for mobile screens */
+  }
+
+  .container#home-section {
+    padding-left: 2px; /* Adjust as needed for mobile screens */
+    padding-right: 2px; /* Adjust as needed for mobile screens */
+  }
+}
+
+@media (max-width: 428px) {
+  .bg-dark.text-center.p-5.p-lg-0.pt-lg-5.text-light {
+    padding-top: 1rem; /* Adjust as needed for smaller screens */
+  }
+
+  .container#home-section {
+    padding-left: 1px; /* Adjust as needed for smaller screens */
+    padding-right: 1px; /* Adjust as needed for smaller screens */
+  }
+}
+
 
